--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div id="layer-4" class="layers">
         </div>
+        <h2>MC &amp; The Manics</h2>
     </div>
     
     <div class="background">
